[package]
name = "rust-wgpu-tutorials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
cfg-if = "1.0.0"
env_logger = "0.10.0"
image = { version = "0.24.7", features = ["png"] }
log = "0.4.20"
pollster = { version = "0.3.0", features = ["macro"] }
wgpu = "0.17.1"
winit = { version = "0.29.2", features = ["rwh_05"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Document", "Window", "Element"] }
wgpu = { version = "0.17.1", features = ["webgl"] }
